@@ -1,8 +1,8 @@
 {#  -*- coding: utf-8 -*- #}
 {% extends 'base.tmpl' %}
-{% import 'crumbs.tmpl' as ui with context %}
+{% import 'ui_helper.tmpl' as ui with context %}
 {% block content %}
-{{ ui.bar(crumbs) }}
+{{ ui.breadcrumbs(crumbs) }}
 {% if folders or files %}
 <ul>
 {% for name in folders %}
