@@ -1,0 +1,18 @@
+{#  -*- coding: utf-8 -*- #}
+{% macro breadcrumbs(crumbs) %}
+{% if crumbs %}
+<nav class="breadcrumbs">
+<ul class="breadcrumb">
+    {% for link, text in crumbs %}
+        {% if text != index_file %}
+            {% if link == '#' %}
+                <li>{{ text.rsplit('.html', 1)[0] }}</li>
+            {% else %}
+                <li><a href="{{ link }}">{{ text }}</a></li>
+            {% endif %}
+        {% endif %}
+    {% endfor %}
+</ul>
+</nav>
+{% endif %}
+{% endmacro %}
