@@ -1,6 +1,5 @@
 ## -*- coding: utf-8 -*-
-
-<%def name="bar(crumbs)">
+<%def name="breadcrumbs(crumbs)">
 %if crumbs:
 <nav class="breadcrumbs">
 <ul class="breadcrumb">
