@@ -1,6 +1,4 @@
 {#  -*- coding: utf-8 -*- #}
-
-{% import 'annotation_helper.tmpl' as notes with context %}
 {% macro html_headstart() %}
 <!DOCTYPE html>
 <html
