@@ -1,11 +1,11 @@
 ## -*- coding: utf-8 -*-
 <%inherit file="base.tmpl"/>
 <%namespace name="comments" file="comments_helper.tmpl"/>
-<%namespace name="ui" file="crumbs.tmpl" import="bar"/>
+<%namespace name="ui" file="ui_helper.tmpl"/>
 <%block name="sourcelink"></%block>
 
 <%block name="content">
-    ${ui.bar(crumbs)}
+    ${ui.breadcrumbs(crumbs)}
     %if title:
     <h1>${title|h}</h1>
     %endif
