@@ -1,8 +1,8 @@
 ## -*- coding: utf-8 -*-
 <%inherit file="base.tmpl"/>
-<%namespace name="ui" file="crumbs.tmpl" import="bar"/>
+<%namespace name="ui" file="ui_helper.tmpl"/>
 <%block name="content">
-${ui.bar(crumbs)}
+${ui.breadcrumbs(crumbs)}
 %if folders or files:
 <ul>
 % for name in folders:
@@ -24,9 +24,7 @@ ${ui.bar(crumbs)}
 </%block>
 
 <%block name="sourcelink">
-% if source_link:
-    <li class="nav-item">
-    <a href="${source_link}" id="sourcelink" class="nav-link">${messages("Source")}</a>
-    </li>
+% if show_sourcelink:
+    ${ui.show_sourcelink(source_link)}
 % endif
 </%block>
